--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -96,7 +96,7 @@
     "#### References\n",
     "- \"Efficient Estimation of Word Representations in Vector Space\", Mikolov et al., 2013, [arxiv.org/abs/1301.3781](http://arxiv.org/abs/1301.3781)\n",
     "\n",
-    "![Mikolov et al. (2013)](images/2022-04-11-22-33-07.png)"
+    "![Mikolov et al. (2013)](images/cbow.png)"
    ]
   },
   {
