Added Wortschatz citation

--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -26,8 +26,10 @@
    "outputs": [],
    "source": [
     "# Dowload a small dataset of sentences from the English Wikipedia from the \"Wortschatz\" project of the University Leipzig\n",
+    "# - D. Goldhahn, T. Eckart & U. Quasthoff: Building Large Monolingual Dictionaries at the Leipzig Corpora Collection: From 100 to 200 Languages.\n",
+    "#   In: Proceedings of the 8th International Language Resources and Evaluation (LREC'12), 2012\n",
     "!mkdir data\n",
-    "!curl https://pcai056.informatik.uni-leipzig.de/downloads/corpora/eng_wikipedia_2016_10K.tar.gz -o data/eng_wikipedia_2016_10K.tar.gz\n",
+    "!curl http://pcai056.informatik.uni-leipzig.de/downloads/corpora/eng_wikipedia_2016_10K.tar.gz -o data/eng_wikipedia_2016_10K.tar.gz\n",
     "!tar -xf data/eng_wikipedia_2016_10K.tar.gz -C data/\n",
     "\n",
     "plain_text_file = \"data/eng_wikipedia_2016_10K/eng_wikipedia_2016_10K-sentences.txt\""
