--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -195,7 +195,10 @@
     "3. Evaluate and compare your results.\n",
     "\n",
     "#### Refernces\n",
-    "- \"Two/Too Simple Adaptations of Word2Vec for Syntax Problems\", Ling et al., 2015, [aclanthology.org/N15-1142/](https://aclanthology.org/N15-1142/)"
+    "- \"Two/Too Simple Adaptations of Word2Vec for Syntax Problems\", Ling et al., 2015, [aclanthology.org/N15-1142/](https://aclanthology.org/N15-1142/)\n",
+    "\n",
+    "\n",
+    "![Ling et al. (2015)](images/cwindow.png)"
    ]
   },
   {
