--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -98,7 +98,10 @@
     "#### References\n",
     "- \"Efficient Estimation of Word Representations in Vector Space\", Mikolov et al., 2013, [arxiv.org/abs/1301.3781](http://arxiv.org/abs/1301.3781)\n",
     "\n",
-    "![Mikolov et al. (2013)](images/cbow.png)"
+    "![Mikolov et al. (2013)](images/cbow.png)\n",
+    "\n",
+    "#### Hints\n",
+    "- Use the `torch.nn.Embedding` module to create your vector representations."
    ]
   },
   {
