Added %pip install call of necessary packages

--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -39,6 +39,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Installing necessary packages (i.e. if on Colab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install torch datasets tokenizers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Working with `🤗 datasets`\n",
     "\n",
     "1. Familiarize yourself with the `🤗 datasets` package and it's API.\n",
