--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -26,11 +26,29 @@
    "outputs": [],
    "source": [
     "# Dowload a small dataset of sentences from the English Wikipedia from the \"Wortschatz\" project of the University Leipzig\n",
+    "# - D. Goldhahn, T. Eckart & U. Quasthoff: Building Large Monolingual Dictionaries at the Leipzig Corpora Collection: From 100 to 200 Languages.\n",
+    "#   In: Proceedings of the 8th International Language Resources and Evaluation (LREC'12), 2012\n",
     "!mkdir data\n",
-    "!curl https://pcai056.informatik.uni-leipzig.de/downloads/corpora/eng_wikipedia_2016_10K.tar.gz -o data/eng_wikipedia_2016_10K.tar.gz\n",
+    "!curl http://pcai056.informatik.uni-leipzig.de/downloads/corpora/eng_wikipedia_2016_10K.tar.gz -o data/eng_wikipedia_2016_10K.tar.gz\n",
     "!tar -xf data/eng_wikipedia_2016_10K.tar.gz -C data/\n",
     "\n",
     "plain_text_file = \"data/eng_wikipedia_2016_10K/eng_wikipedia_2016_10K-sentences.txt\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Installing necessary packages (i.e. if on Colab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install torch datasets tokenizers"
    ]
   },
   {
@@ -96,7 +114,10 @@
     "#### References\n",
     "- \"Efficient Estimation of Word Representations in Vector Space\", Mikolov et al., 2013, [arxiv.org/abs/1301.3781](http://arxiv.org/abs/1301.3781)\n",
     "\n",
-    "![Mikolov et al. (2013)](images/cbow.png)"
+    "![Mikolov et al. (2013)](images/cbow.png)\n",
+    "\n",
+    "#### Hints\n",
+    "- Use the `torch.nn.Embedding` module to create your vector representations."
    ]
   },
   {
@@ -193,7 +214,10 @@
     "3. Evaluate and compare your results.\n",
     "\n",
     "#### Refernces\n",
-    "- \"Two/Too Simple Adaptations of Word2Vec for Syntax Problems\", Ling et al., 2015, [aclanthology.org/N15-1142/](https://aclanthology.org/N15-1142/)"
+    "- \"Two/Too Simple Adaptations of Word2Vec for Syntax Problems\", Ling et al., 2015, [aclanthology.org/N15-1142/](https://aclanthology.org/N15-1142/)\n",
+    "\n",
+    "\n",
+    "![Ling et al. (2015)](images/cwindow.png)"
    ]
   },
   {
